change: Fix spacing

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -3,14 +3,14 @@
 @tailwind utilities;
 
 .app-container {
-    @apply flex flex-col items-center min-h-screen gap-5 bg-gray-100 font-sans antialiased;
+    @apply flex flex-col items-center gap-5 font-sans antialiased;
 }
 
 h1 {
     @apply text-2xl font-bold;
 }
 h2 {
-    @apply text-2xl font-semibold text-center text-gray-900 dark:text-white;
+    @apply text-2xl font-semibold text-gray-900 dark:text-white;
 }
 .link {
     @apply font-medium text-blue-600 dark:text-blue-500 hover:underline;
